syntax="proto3";

package context.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "xevo/agentserver/proto;context.v1";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  info: {
    version: "1.0";
  };
  external_docs: {
    url: "https://localhost/";
    description: "gRPC example repository";
  };
  schemes: HTTPS;
};

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;
option (gogoproto.messagename_all) = true;

service ContextService {
  rpc GetRecommends(GetRecommendsRequest) returns (GetRecommendsResponse) {
    option (google.api.http) = {
      get: "/api/v1/recommends"
    };
  }
}

message GetRecommendsRequest {
  UserState user_state = 1;
  CarState car_state = 2;
  google.protobuf.Timestamp time = 3;
}

message GetRecommendsResponse {
}

message UserState {
  string user_id = 1;
  string session_id = 2;
}

message CarState {
  string car_id = 1;
  Coordinates current_location = 2;
  Coordinates destination = 3;

  // Percentage from 0 to 100 percent
  float fuel_level_percentage = 4;
  // Remaining range in miles
  float range_m = 5;

  int32 number_of_passengers = 6;
  float heading_deg = 7;
  float speed_mph = 8;
  bool is_in_park = 9;

  bool is_simulator = 15;
}

message Coordinates {
  double latitude = 1;
  double longitude = 2;
  double altitude = 3;
  double accuracy = 4;
  double altitudeAccuracy = 5;
}

message GeoCoordinates {
  Coordinates location = 1;
  string address = 2;
  string addressCountry = 3;
  string postalCode = 4;
}

message PointOfInterest {
  string name = 1;
  GeoCoordinates coordinates = 2;
  enum Category {
    UNKNOWN = 0;
    GAS_STATION = 1;
    PARKING = 2;
    SCHOOL = 3;
    GROCERY = 4;
    CAFE = 5;
    RESTAURANT = 6;
  }
  repeated Category categories = 3;
  double distance = 4;

  double score = 15;
}
